--- a/package.json
+++ b/package.json
@@ -15,17 +15,28 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
+    "d3-hierarchy": "^3.1.2",
     "expo": "~52.0.46",
     "expo-clipboard": "~7.0.1",
+    "expo-gl": "^15.0.5",
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-three": "^8.0.0",
     "react": "18.3.1",
+    "react-d3-tree": "^3.6.6",
+    "react-force-graph": "^1.47.6",
     "react-native": "0.76.9",
     "react-native-auth0": "^4.5.0",
+    "react-native-d3-tree-graph": "^1.0.12",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-paper": "^5.13.5",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
