--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-three": "^8.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-d3-tree": "^3.6.6",
     "react-force-graph": "^1.47.6",
